--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "word-game",
   "version": "0.0.1",
   "private": true,
+  "homepage": "http://josephrstraub.github.io/word-game",
   "devDependencies": {
+    "gh-pages": "^0.11.0",
     "react-scripts": "0.6.1"
   },
   "dependencies": {
