--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
+    "react-sortable-hoc": "^0.1.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.0",
     "redux-promise": "^0.5.3",
